<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ExpenseTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_new_claim">Create New Claim</string>
    <string name="Claim">Choose an Existing Claim</string>
    <string name="select_a_claim">Claims</string>
    <string name="date_range">Date Range:</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="description_of_claim">Description of Claim</string>
    <string name="create">Create</string>
    <string name="status">Status:</string>
    <string name="title_activity_email_claim">Email Claim</string>
    <string name="title_activity_edit_expense">Edit Expense</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="expense">Expense</string>
    <string name="title_activity_change_status">Change Status</string>
    <string name="title_activity_existing_claims">ExistingClaimsActivity</string>
    <string name="title_activity_create_claim">CreateClaimActivity</string>
    <string name="title_activity_claim_created">Claim Created</string>
    <string name="title_activity_expense_list">Expenses</string>
    <string name="choose_existing_claim">Choose an Existing Claim</string>
    <string name="title_activity_view_claim">View Claim</string>

    <string-array name="expenseCategory">
        <item>Air Fare</item>
        <item>Ground Transport</item>
        <item>Vehicle Rental</item>
        <item>Fuel</item>
        <item>Parking</item>
        <item>Registration</item>
        <item>Accomodation</item>
        <item>Meal</item>
    </string-array>
    <string-array name="expenseCurrency">
        <item>CAD</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>

    <string name="title_activity_view_expense">View Expense</string>

</resources>
