<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/descriptionOfClaimEditText"
        android:gravity="top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createClaimButton"
        android:layout_alignLeft="@+id/descriptionOfClaimTextView"
        android:layout_alignStart="@+id/descriptionOfClaimTextView"
        android:layout_below="@+id/descriptionOfClaimTextView"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/createClaimButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:onClick="createClaim"
        android:text="@string/create" />

    <TextView
        android:id="@+id/endDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDateTextView"
        android:layout_alignStart="@+id/descriptionOfClaimTextView"
        android:layout_below="@+id/startDateTextView"
        android:layout_marginTop="23dp"
        android:text="@string/end"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/startDateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startDateTextView"
        android:layout_toRightOf="@+id/claimNameTextView"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/endDateEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDateEditText"
        android:layout_below="@+id/startDateEditText"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/descriptionOfClaimTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endDateTextView"
        android:layout_alignStart="@+id/claimDateRangeTextView"
        android:layout_centerVertical="true"
        android:text="@string/description_of_claim"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/claimNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/claimDateRangeTextView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="Name:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/claimNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/claimNameTextView"
        android:ems="10" />

    <TextView
        android:id="@+id/startDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/claimDateRangeTextView"
        android:layout_alignStart="@+id/claimDateRangeTextView"
        android:layout_below="@+id/claimDateRangeTextView"
        android:layout_marginTop="19dp"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/claimDateRangeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/claimNameEditText"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="29dp"
        android:text="@string/date_range"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
